--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -99,6 +99,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              },
+              
+              {
                 "glob": "**/*",
                 "input": "public"
               }
