--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,3 +1,9 @@
+[build]
+  base = "Frontend"
+  publish = "dist/frontend/browser"
+  command = "npm run build"
+
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
